--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <section class"wrapper">
     <!-- header -->
 
     <header >
@@ -333,7 +335,7 @@
       <p class="end">Design by<span><i class="fa-solid fa-face-grin"></i> Aman Kumar Chaurasiya</span></p>
 
     </footer>
-     
+    </section>
        
 </body>
 </html>
